# Rift

./: .gitignore  CMakeLists.txt  README.md  buildfile  manifest  repositories.manifest
dde/: rift  setup_rift
include/: README.txt
include/rift/algorithms/search/: dijkstra.hpp  priority_search.hpp  search_concepts.hpp
include/rift/numeric/: README.txt  bounded.hpp  probability.hpp
include/rift/util/: concepts.hpp  index.hpp  rustify.hpp  type_traits.hpp  zip.hpp
rift/: buildfile  export.hpp  rift.cpp  rift.hpp  version.hpp.in
rift/cognition/: buildfile
rift/cognition/search/: buildfile  priority_search.mpp  search_concepts.mpp
rift/foundation/algorithm/: zip.mpp
rift/foundation/data/: index.mpp
rift/foundation/lang/: concepts.mpp  rustify.hpp  type_traits.mpp
test/algorithms/search/: test_dijkstra.cpp  test_priority_search.cpp
test/numeric/: test_bounded.cpp  test_probability.cpp
tests/basics/: buildfile  driver.cpp
